# ghidora

./: .gitignore  LICENSE  README.md  ghidora.config.mjs  package-lock.json  package.json
apps/ghidora/: README.md  esbuild.config.cjs  package.json  tsconfig.json
apps/ghidora-core/: Cargo.toml  LICENSE  README.md  package.json
apps/ghidora-core/src/: cli.rs  config.rs  crypto.rs  graphui.html  lib.rs  utils.rs
apps/ghidora/src/: main.ts
apps/ghidora/src/datatypes/: validateDataTypes.ts
apps/ghidora/src/orchestrator/: cache.ts  cloud-cache.ts  discover.ts  executePlan.ts  graph-cache.ts  graph-core.ts  graph-server.ts  graph.ts  starters.ts
apps/ghidora/src/updates/: checkForUpdates.ts
apps/ghidora/src/utils/: ghidoraHelp.ts  helper.ts  processWrapper.ts
tests/: .gitignore  ghidora.config.mjs  ghidora.test.js  package.json
tests/apps/honoone/: package.json
tests/apps/honothree/: package.json
tests/apps/honothree/src/: index.ts
tests/apps/honotwo/: package.json
tests/apps/honotwo/src/: index.ts
tests/apps/manidaa/: esbuild.config.js  package.json
tests/apps/manidaa/src/: main.ts
