[package]
name = "ghidora"
version = "0.0.1"
authors = ["Shyam20001 <mshayam41@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
blake3 = { version = "1.5", default-features = false }
tar = "0.4"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
subtle = "2.6.1"


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
